<resources>
    <string name="app_name">MuhammadShoppingList</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Amount">Amount To Get</string>
    <string name="Name">Name</string>
    <string name="name">Name</string>
    <string name="price">Price Item</string>
    <string name="unit">Unit</string>
    <string name="save">Save Item</string>
    <string name="total">Total</string>
    <string name="count">Count</string>
    <string name="iscomleted">Is Completed</string>
</resources>
